[package]
name = "rust_leds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
ws2818-rgb-led-spi-driver = "2.0.0"
ecolor = "0.22.0"

[dev-dependencies]

[patch.crates-io]
ws2818-rgb-led-spi-driver = {git = "https://github.com/Danzibob/WS28xx-n-channel-spi.git"}

